      PR libstdc++/68735.
  * Fix parallel linking of cc1gm2.
  * PR sanitizer/98699: Don't enable --as-needed with -fsanitize=* options.
    Closes: #980110.
  * Use --push-state/--pop-state for gold everywhere.
  * Backport prerequiste patch for PR target/97250 (i386: Define __LAHF_SAHF__
    and __MOVBE__ macros, based on ISA flags).

 -- Matthias Klose <doko@debian.org>  Thu, 14 Jan 2021 11:02:25 +0100

gcc-10 (10.2.1-6) unstable; urgency=medium

  * Update to git 20210110 from the gcc-10 branch.
    - Fix PR c++/98556, PR c++/98551, PR c++/96197.
  * gcc-10-source: Depend on time.
  * Fix PR rtl-optimization/97714, taken from the trunk. Closes: #975153.
  * Build the gcn offload compiler based on amdgcn-tools (based on LLVM 9).

 -- Matthias Klose <doko@debian.org>  Sun, 10 Jan 2021 12:35:39 +0100

gcc-10 (10.2.1-5) unstable; urgency=medium

  * Update to git 20210108 from the gcc-10 branch.
    - Fix PR target/96793 (x86), PR rtl-optimization/97421, PR fortran/96100,
      PR fortran/96101, PR target/96320, PR target/97865,
      PR tree-optimization/98514, PR tree-optimization/98474, PR c++/98353,
      PR c++/98383, PR middle-end/98183, PR middle-end/98205,
      PR target/94440 (x86), PR target/98100, PR plugins/98059,
      PR target/98063 (x86), PR target/98522 (x86), PR target/98521 (x86),
      PR target/97865, PR c++/98187, PR c++/98122, PR c++/98072, PR c++/82099,
      PR c++/96675, PR c++/96742, PR c++/97975, PR c++/98043, PR c++/98103,
      PR c++/97427, PR c++/97438, PR fortran/92587, PR fortran/96325,
      PR fortran/83118, PR fortran/96012.
  * Fix hppa64 snapshot builds.
  * Force running tests on m68k and sh4 architectures.
  * Provide timing and resource information for all builds.
  * Backport PR target/97250: Add support for x86-64-v2, x86-64-v3, x86-64-v4
    levels for x86-64.
  * Build the offload compilers using newlib 4.1.0.
  * Bump standards version.

 -- Matthias Klose <doko@debian.org>  Fri, 08 Jan 2021 17:33:30 +0100
