@@ -67,6 +67,8 @@ XB-Important: yes
 Protected: yes
 Depends: gcc-10-base (= ${gcc:Version}), ${shlibs:Depends}, ${misc:Depends}
 Provides: libgcc2 (= ${gcc:EpochVersion}), 
+Breaks: ${libgcc:Breaks}
+Replaces: libgcc2 (<< 1:10)
 Description: GCC support library
  Shared version of the support library, a library of internal subroutines
  that GCC uses to overcome shortcomings of particular machines, or
@@ -80,6 +82,8 @@ XB-Important: yes
 Protected: yes
 Pre-Depends: ${misc:Pre-Depends}
 Provides: libgcc4 (= ${gcc:EpochVersion})
+Breaks: ${libgcc:Breaks}
+Replaces: libgcc4 (<< 1:10)
 Section: libs
 Priority: optional
 Depends: gcc-10-base (= ${gcc:Version}), ${shlibs:Depends}, ${misc:Depends}
