@@ -16,6 +16,8 @@ gcc-10 (10.2.1-7) UNRELEASED; urgency=medium
   * Use --push-state/--pop-state for gold everywhere.
   * Backport prerequiste patch for PR target/97250 (i386: Define __LAHF_SAHF__
     and __MOVBE__ macros, based on ISA flags).
+  * Use the same breaks relations for libgcc-s2 and libgcc-s4 as for
+    libgcc-s1. Closes: #980770.
 
  -- Matthias Klose <doko@debian.org>  Thu, 14 Jan 2021 11:02:25 +0100
 
